[package]
name = "phalanx-crypto"
version = "0.1.0"
edition = "2021"
authors = ["Phalanx Contributors"]
description = "🛡️ Phalanx - General-purpose group E2E encryption protocol"
license = "MIT"
repository = "https://github.com/exec/phalanx-crypto"
homepage = "https://github.com/exec/phalanx-crypto"
documentation = "https://docs.rs/phalanx-crypto"
keywords = ["encryption", "e2e", "group", "protocol", "security"]
categories = ["cryptography", "network-programming", "security"]
readme = "README.md"

[features]
default = ["std", "serde", "async"]
std = []
serde = ["dep:serde", "dep:serde_json"]
async = ["tokio", "async-trait", "tracing"]

[dependencies]
# Core cryptographic dependencies
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["serde"] }
ed25519-dalek = { version = "2.0", features = ["serde"] }
blake3 = "1.5"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
rand_chacha = "0.3"
zeroize = { version = "1.8", features = ["derive"] }

# Serialization (optional)
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Async support (optional)
tokio = { version = "1.0", features = ["sync", "time", "fs"], optional = true }
async-trait = { version = "0.1", optional = true }
tracing = { version = "0.1", optional = true }

# Utilities
thiserror = "2.0"
bytes = { version = "1.9", features = ["serde"] }
base64 = "0.22"
subtle = "2.6"
hex = "0.4"
bincode = "1.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.6"
hex = "0.4"

# Benchmarks will be added later
# [[bench]]
# name = "encryption_benchmarks" 
# harness = false